/*
 * Copyright (c) 2022-present, Okta, Inc. and/or its affiliates. All rights reserved.
 * The Okta software accompanied by this notice is provided pursuant to the Apache License, Version 2.0 (the "License.")
 *
 * You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0.
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
 * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *
 * See the License for the specific language governing permissions and limitations under the License.
 */

import { IdxAuthenticator } from '@okta/okta-auth-js';
import { getStubFormBag, getStubTransactionWithNextStep } from 'src/mocks/utils/utils';
import {
  FieldElement,
  WidgetProps,
} from 'src/types';

import { transformPhoneVerification } from '.';

describe('Phone verification Transformer Tests', () => {
  const transaction = getStubTransactionWithNextStep();
  const widgetProps: WidgetProps = {};
  const formBag = getStubFormBag();
  beforeEach(() => {
    formBag.uischema.elements = [
      {
        type: 'Field',
        options: {
          inputMeta: {
            name: 'authenticator.methodType',
            options: [{ value: 'sms', label: 'SMS' }, { value: 'voice', label: 'Voice call' }],
          },
        },
      } as FieldElement,
    ];
  });

  it('should add correct UI elements to schema when multiple methodType choices exists'
    + ' and sms is the first methodType choice', () => {
    const updatedFormBag = transformPhoneVerification({ transaction, formBag, widgetProps });

    expect(updatedFormBag.uischema.elements.length).toBe(5);
    expect(updatedFormBag).toMatchSnapshot();
  });

  it('should add correct UI elements to schema when multiple methodType choices exists'
    + ' and voice is the first methodType choice', () => {
    formBag.uischema.elements = [{
      type: 'Field',
      options: {
        inputMeta: {
          name: 'authenticator.methodType',
          options: [{ value: 'voice', label: 'Voice call' }, { value: 'sms', label: 'SMS' }],
        },
      },
    } as FieldElement];
    const updatedFormBag = transformPhoneVerification({ transaction, formBag, widgetProps });

    expect(updatedFormBag.uischema.elements.length).toBe(5);
    expect(updatedFormBag).toMatchSnapshot();
  });

  it('should add correct UI elements to schema when only voice methodType choice exists', () => {
    formBag.uischema.elements = [{
      type: 'Field',
      options: {
        inputMeta: {
          name: 'authenticator.methodType',
          options: [{ value: 'voice', label: 'Voice call' }],
        },
      },
    } as FieldElement];
    const updatedFormBag = transformPhoneVerification({ transaction, formBag, widgetProps });

    expect(updatedFormBag.uischema.elements.length).toBe(4);
    expect(updatedFormBag).toMatchSnapshot();
  });

  it('should add correct UI elements to schema when only sms methodType choice exists', () => {
    formBag.uischema.elements = [{
      type: 'Field',
      options: {
        inputMeta: {
          name: 'authenticator.methodType',
          options: [{ value: 'sms', label: 'SMS' }],
        },
      },
    } as FieldElement];
    const updatedFormBag = transformPhoneVerification({ transaction, formBag, widgetProps });

    expect(updatedFormBag.uischema.elements.length).toBe(4);
    expect(updatedFormBag).toMatchSnapshot();
  });

  it('should add correct UI elements to schema when only sms methodType choice exists'
    + ' and redacted phoneNumber exists in Idx response ', () => {
    const mockPhoneNumber = '+121xxxxx34';
    formBag.uischema.elements = [{
      type: 'Field',
      options: {
        inputMeta: {
          name: 'authenticator.methodType',
          options: [{ value: 'sms', label: 'SMS' }],
        },
      },
    } as FieldElement];
    transaction.nextStep = {
      name: 'mock-step',
      canResend: true,
      relatesTo: {
        value: {
          profile: {
            phoneNumber: mockPhoneNumber,
          },
        } as unknown as IdxAuthenticator,
      },
    };
    const updatedFormBag = transformPhoneVerification({ transaction, formBag, widgetProps });

    expect(updatedFormBag.uischema.elements.length).toBe(4);
    expect(updatedFormBag).toMatchSnapshot();
  });

  it('should add correct UI elements to schema when only voice methodType choice exists'
    + ' and redacted phoneNumber exists in Idx response ', () => {
    const mockPhoneNumber = '+121xxxxx34';
    formBag.uischema.elements = [{
      type: 'Field',
      options: {
        inputMeta: {
          name: 'authenticator.methodType',
          options: [{ value: 'voice', label: 'Voice call' }],
        },
      },
    } as FieldElement];
    transaction.nextStep = {
      name: 'mock-step',
      canResend: true,
      relatesTo: {
        value: {
          profile: {
            phoneNumber: mockPhoneNumber,
          },
        } as unknown as IdxAuthenticator,
      },
    };
    const updatedFormBag = transformPhoneVerification({ transaction, formBag, widgetProps });

    expect(updatedFormBag.uischema.elements.length).toBe(4);
    expect(updatedFormBag).toMatchSnapshot();
  });
});
